--- a/source/index.html
+++ b/source/index.html
@@ -3,12 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Фитнес-центр Super Gym">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Фитнес-центр Super Gym</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <h1>Добро пожаловатьььь!!!</h1>
+
+<!--   <div style="display:none">
+    <include src="build/img/sprite.svg"></include>
+  </div> -->
+
+  <main>
+    <section class="intro">
+      <div class="intro__wrap">
+        <div class="intro__top-block">
+          <a class="page-header__logo">Supergym</a>
+          <a class="page-header__phone" href="tel:8-800-555-55-55" >8-800-555-55-55</a>
+        </div>
+        <div class="intro__main">
+          <div class="intro__main-container">
+            <span> Омск </span>
+            <h1 class="intro__title"> Фитнес центр </h1>
+            <div class="intro__description">
+              <p>Тренажёрный зал</p>
+              <p>Групповые занятия</p>
+              <p>Кардио-зона</p>
+            </div>
+            <button class="intro__button" type="button" aria-label="Купить абонемент">Купить абонемент</button>
+          </div>
+          <ul class="intro__social-list">
+            <li><a class="intro__social-item" href="#">FB</a></li>
+            <li><a class="intro__social-item" href="#">VK</a></li>
+            <li><a class="intro__social-item" href="#">IG</a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+
+
+
+  </main>
+  <footer>
+  </footer>
+
+
+
   <script src="js/script.js"></script>
 </body>
 </html>
