Начат блок соревнования

--- a/source/index.html
+++ b/source/index.html
@@ -150,7 +150,6 @@
                 <use xlink:href="#ruble"></use>
               </svg>
             </div>
-
             <a class="subscriptions__buy-link" href="#">купить абонемент</a>
           </li>
         </ul>
@@ -190,13 +189,45 @@
                 <use xlink:href="#ruble"></use>
               </svg>
             </div>
-
             <a class="subscriptions__buy-link" href="#">купить абонемент</a>
           </li>
         </ul>
       </div>
     </section>
 
+    <section class="competitions">
+      <div class="competitions__container">
+
+        <div class="competitions__info">
+
+          <div class="competitions__titel-container">
+            <h2 class="competitions__title">SUPER GAMES</h2>
+            <div class="competitions__block-data">
+              <p class="competitions__title-data">Дата</p>
+              <div class="competitions__container-data">
+                <span class="competitions__count-data">7</span>
+                <span class="competitions__text-data">Марта 2019</span>
+              </div>
+              <p class="competitions__title-time">Время</p>
+              <span class="competitions__time">12:00</span>
+            </div>
+          </div>
+
+          <p class="competitions__description">Ежегодные соревнования по CrossFit</p>
+          <a class="competitions__link" href="#">заполнить заявку</a>
+
+        </div>
+
+        <div class="competitions__picture">
+          <picture>
+             <source media="(max-width: 767px)" srcset="img/games-mobile.jpg">
+             <source media="(max-width: 1199px)" srcset="img/games-tablet.jpg">
+             <img src="img/games-desktop.jpg" width="660" height="500" alt="Спортивные соревнования">
+          </picture>
+        </div>
+      </div>
+
+    </section>
 
 
 
