--- a/source/index.html
+++ b/source/index.html
@@ -229,7 +229,7 @@
 
     </section>
 
-    <section class="coaches">
+<!--     <section class="coaches">
       <h2 class="coaches__title">Тренеры</h2>
       <ul class="coaches__list">
         <li class="coaches__item">
@@ -289,7 +289,7 @@
       </ul>
 
 
-    </section>
+    </section> -->
 
 
 
