--- a/source/index.html
+++ b/source/index.html
@@ -48,17 +48,17 @@
         <p class="gym__text-desktop">В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажерами. Также в фитнес центре есть несколько оборудованных залов для различных видов групповых занятий.</p>
       </div>
       <div class="gym__photo-container">
-        <picture class="gym__photo-picture">
-           <source media="(max-width: 767px)" srcset="img/hall-mobile.jpg">
-           <source media="(max-width: 1199px)" srcset="img/hall-tablet.jpg">
-           <img class="gym__photo" src="img/hall-desktop.jpg" width="660" height="401" alt="Тренажерный зал">
-        </picture>
-        <div class="gym__video">
-          <picture>
-            <source media="(max-width: 767px)" srcset="img/video-mobile.jpg">
-            <source media="(max-width: 1199px)" srcset="img/video-tablet.jpg">
-            <img src="img/video-desktop.jpg" width="364" height="228" alt="Видео зала">
-          </picture>
+
+        <img class="gym__photo-desktop" src="img/hall-desktop.jpg" width="660" height="401" alt="Тренажерный зал">
+        <img class="gym__photo-tablet" src="img/hall-tablet.jpg" width="678" height="345" alt="Тренажерный зал">
+        <img class="gym__photo-mobile" src="img/hall-mobile.jpg" width="320" height="313" alt="Тренажерный зал">
+
+        <div class="gym__video-container">
+
+            <img class="gym__video-desktop" src="img/video-desktop.jpg" width="364" height="228" alt="Видео зала">
+            <img class="gym__video-tablet" src="img/video-tablet.jpg" width="266" height="167" alt="Видео зала">
+            <img class="gym__video-mobile" src="img/video-mobile.jpg" width="320" height="167" alt="Видео зала">
+
         <button type="button" aria-label="Запустить видео"></button>
        </div>
       </div>
@@ -219,17 +219,17 @@
         </div>
 
         <div class="competitions__picture">
-          <picture>
-             <source media="(max-width: 767px)" srcset="img/games-mobile.jpg">
-             <source media="(max-width: 1199px)" srcset="img/games-tablet.jpg">
-             <img src="img/games-desktop.jpg" width="660" height="500" alt="Спортивные соревнования">
-          </picture>
+           <img class="competitions__img-desktop" src="img/games-desktop.jpg" width="660" height="500" alt="Спортивные соревнования">
+           <img class="competitions__img-tablet" src="img/games-tablet.jpg" width="386" height="292" alt="Спортивные соревнования">
+           <img class="competitions__img-mobile" src="img/games-mobile.jpg" width="290" height="292" alt="Спортивные соревнования">
         </div>
       </div>
 
     </section>
 
 <!--     <section class="coaches">
+
+
       <h2 class="coaches__title">Тренеры</h2>
       <ul class="coaches__list">
         <li class="coaches__item">
