--- a/source/index.html
+++ b/source/index.html
@@ -298,6 +298,145 @@
               </ul>
             </div>
           </li>
+          <li class="coaches__item">
+            <h3 class="coaches__name">Мария Кетова</h3>
+            <img class="coaches__photo" src="img/Mari.jpg" width="260" height="294" alt="Мария Кетова">
+            <div class="coaches__info">
+              <h3 class="coaches__name-hover">Мария Кетова</h3>
+              <p>CrossFit</p>
+              <ul class="coaches__info-list">
+                <li>Certified Level 3 Trainer</li>
+                <li>Победитель чемпионата России по CrossFit </li>
+                <li>Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </li>
+<li class="coaches__item">
+            <h3 class="coaches__name">Мария Кетова</h3>
+            <img class="coaches__photo" src="img/Mari.jpg" width="260" height="294" alt="Мария Кетова">
+            <div class="coaches__info">
+              <h3 class="coaches__name-hover">Мария Кетова</h3>
+              <p>CrossFit</p>
+              <ul class="coaches__info-list">
+                <li>Certified Level 3 Trainer</li>
+                <li>Победитель чемпионата России по CrossFit </li>
+                <li>Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </li>
+<li class="coaches__item">
+            <h3 class="coaches__name">Мария Кетова</h3>
+            <img class="coaches__photo" src="img/Mari.jpg" width="260" height="294" alt="Мария Кетова">
+            <div class="coaches__info">
+              <h3 class="coaches__name-hover">Мария Кетова</h3>
+              <p>CrossFit</p>
+              <ul class="coaches__info-list">
+                <li>Certified Level 3 Trainer</li>
+                <li>Победитель чемпионата России по CrossFit </li>
+                <li>Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </li>
+<li class="coaches__item">
+            <h3 class="coaches__name">Мария Кетова</h3>
+            <img class="coaches__photo" src="img/Mari.jpg" width="260" height="294" alt="Мария Кетова">
+            <div class="coaches__info">
+              <h3 class="coaches__name-hover">Мария Кетова</h3>
+              <p>CrossFit</p>
+              <ul class="coaches__info-list">
+                <li>Certified Level 3 Trainer</li>
+                <li>Победитель чемпионата России по CrossFit </li>
+                <li>Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </li>
+
+                    <li class="coaches__item">
+            <h3 class="coaches__name">Алексей Лавров</h3>
+            <img class="coaches__photo" src="img/Aleksey.jpg" width="260" height="294" alt="Алексей Лавров">
+            <div class="coaches__info">
+              <h3 class="coaches__name-hover">Алексей Лавров</h3>
+              <p>CrossFit</p>
+              <ul class="coaches__info-list">
+                <li>Certified Level 3 Trainer</li>
+                <li>Победитель чемпионата России по CrossFit </li>
+                <li>Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </li>
+
+
+<li class="coaches__item">
+            <h3 class="coaches__name">Мария Кетова</h3>
+            <img class="coaches__photo" src="img/Mari.jpg" width="260" height="294" alt="Мария Кетова">
+            <div class="coaches__info">
+              <h3 class="coaches__name-hover">Мария Кетова</h3>
+              <p>CrossFit</p>
+              <ul class="coaches__info-list">
+                <li>Certified Level 3 Trainer</li>
+                <li>Победитель чемпионата России по CrossFit </li>
+                <li>Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </li>
+
+
+                    <li class="coaches__item">
+            <h3 class="coaches__name">Алексей Лавров</h3>
+            <img class="coaches__photo" src="img/Aleksey.jpg" width="260" height="294" alt="Алексей Лавров">
+            <div class="coaches__info">
+              <h3 class="coaches__name-hover">Алексей Лавров</h3>
+              <p>CrossFit</p>
+              <ul class="coaches__info-list">
+                <li>Certified Level 3 Trainer</li>
+                <li>Победитель чемпионата России по CrossFit </li>
+                <li>Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </li>
+
+<li class="coaches__item">
+            <h3 class="coaches__name">Мария Кетова</h3>
+            <img class="coaches__photo" src="img/Mari.jpg" width="260" height="294" alt="Мария Кетова">
+            <div class="coaches__info">
+              <h3 class="coaches__name-hover">Мария Кетова</h3>
+              <p>CrossFit</p>
+              <ul class="coaches__info-list">
+                <li>Certified Level 3 Trainer</li>
+                <li>Победитель чемпионата России по CrossFit </li>
+                <li>Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </li>
+
+          <li class="coaches__item">
+            <h3 class="coaches__name">Алексеttй Лавров</h3>
+            <img class="coaches__photo" src="img/Aleksey.jpg" width="260" height="294" alt="Алексей Лавров">
+            <div class="coaches__info">
+              <h3 class="coaches__name-hover">Алексей Лавров</h3>
+              <p>CrossFit</p>
+              <ul class="coaches__info-list">
+                <li>Certified Level 3 Trainer</li>
+                <li>Победитель чемпионата России по CrossFit </li>
+                <li>Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </ul>
       </div>
 
