Выполнен блок тренеры

--- a/source/index.html
+++ b/source/index.html
@@ -273,7 +273,6 @@
           <li class="coaches__item">
             <h3 class="coaches__name">Александр Пашков</h3>
             <img class="coaches__photo" src="img/Shurik.jpg" width="260" height="294" alt="Александр Пашков">
-
             <div class="coaches__info">
               <h3 class="coaches__name-hover">Александр Пашков</h3>
               <p>CrossFit</p>
@@ -283,7 +282,6 @@
                 <li>Опыт — 6 лет</li>
               </ul>
             </div>
-
           </li>
           <li class="coaches__item">
             <h3 class="coaches__name">Мария Кетова</h3>
@@ -311,11 +309,11 @@
               </ul>
             </div>
           </li>
-<li class="coaches__item">
-            <h3 class="coaches__name">Мария Кетова</h3>
-            <img class="coaches__photo" src="img/Mari.jpg" width="260" height="294" alt="Мария Кетова">
+          <li class="coaches__item">
+            <h3 class="coaches__name">Александр Пашков</h3>
+            <img class="coaches__photo" src="img/Shurik.jpg" width="260" height="294" alt="Александр Пашков">
             <div class="coaches__info">
-              <h3 class="coaches__name-hover">Мария Кетова</h3>
+              <h3 class="coaches__name-hover">Александр Пашков</h3>
               <p>CrossFit</p>
               <ul class="coaches__info-list">
                 <li>Certified Level 3 Trainer</li>
@@ -324,11 +322,11 @@
               </ul>
             </div>
           </li>
-<li class="coaches__item">
-            <h3 class="coaches__name">Мария Кетова</h3>
-            <img class="coaches__photo" src="img/Mari.jpg" width="260" height="294" alt="Мария Кетова">
+          <li class="coaches__item">
+            <h3 class="coaches__name">Анна Павлова</h3>
+            <img class="coaches__photo" src="img/Anna.jpg" width="260" height="294" alt="Анна Павлова">
             <div class="coaches__info">
-              <h3 class="coaches__name-hover">Мария Кетова</h3>
+              <h3 class="coaches__name-hover">Анна Павлова</h3>
               <p>CrossFit</p>
               <ul class="coaches__info-list">
                 <li>Certified Level 3 Trainer</li>
@@ -337,21 +335,7 @@
               </ul>
             </div>
           </li>
-<li class="coaches__item">
-            <h3 class="coaches__name">Мария Кетова</h3>
-            <img class="coaches__photo" src="img/Mari.jpg" width="260" height="294" alt="Мария Кетова">
-            <div class="coaches__info">
-              <h3 class="coaches__name-hover">Мария Кетова</h3>
-              <p>CrossFit</p>
-              <ul class="coaches__info-list">
-                <li>Certified Level 3 Trainer</li>
-                <li>Победитель чемпионата России по CrossFit </li>
-                <li>Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </li>
-
-                    <li class="coaches__item">
+          <li class="coaches__item">
             <h3 class="coaches__name">Алексей Лавров</h3>
             <img class="coaches__photo" src="img/Aleksey.jpg" width="260" height="294" alt="Алексей Лавров">
             <div class="coaches__info">
@@ -364,79 +348,6 @@
               </ul>
             </div>
           </li>
-
-
-<li class="coaches__item">
-            <h3 class="coaches__name">Мария Кетова</h3>
-            <img class="coaches__photo" src="img/Mari.jpg" width="260" height="294" alt="Мария Кетова">
-            <div class="coaches__info">
-              <h3 class="coaches__name-hover">Мария Кетова</h3>
-              <p>CrossFit</p>
-              <ul class="coaches__info-list">
-                <li>Certified Level 3 Trainer</li>
-                <li>Победитель чемпионата России по CrossFit </li>
-                <li>Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </li>
-
-
-                    <li class="coaches__item">
-            <h3 class="coaches__name">Алексей Лавров</h3>
-            <img class="coaches__photo" src="img/Aleksey.jpg" width="260" height="294" alt="Алексей Лавров">
-            <div class="coaches__info">
-              <h3 class="coaches__name-hover">Алексей Лавров</h3>
-              <p>CrossFit</p>
-              <ul class="coaches__info-list">
-                <li>Certified Level 3 Trainer</li>
-                <li>Победитель чемпионата России по CrossFit </li>
-                <li>Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </li>
-
-<li class="coaches__item">
-            <h3 class="coaches__name">Мария Кетова</h3>
-            <img class="coaches__photo" src="img/Mari.jpg" width="260" height="294" alt="Мария Кетова">
-            <div class="coaches__info">
-              <h3 class="coaches__name-hover">Мария Кетова</h3>
-              <p>CrossFit</p>
-              <ul class="coaches__info-list">
-                <li>Certified Level 3 Trainer</li>
-                <li>Победитель чемпионата России по CrossFit </li>
-                <li>Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </li>
-
-          <li class="coaches__item">
-            <h3 class="coaches__name">Алексеttй Лавров</h3>
-            <img class="coaches__photo" src="img/Aleksey.jpg" width="260" height="294" alt="Алексей Лавров">
-            <div class="coaches__info">
-              <h3 class="coaches__name-hover">Алексей Лавров</h3>
-              <p>CrossFit</p>
-              <ul class="coaches__info-list">
-                <li>Certified Level 3 Trainer</li>
-                <li>Победитель чемпионата России по CrossFit </li>
-                <li>Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         </ul>
       </div>
 
