Выполен блок акции

--- a/source/index.html
+++ b/source/index.html
@@ -376,7 +376,7 @@
               </div>
               <div class="advantages__description-block">
                 <h3>Собственная парковка</h3>
-                <p>Вы всегда найдете место для своей машины на нашей парковке</p>
+                <p class="advantages__parking-description">Вы всегда найдете место для своей машины на нашей парковке</p>
               </div>
             </div>
 
@@ -406,45 +406,38 @@
               </div>
               <div class="advantages__description-block">
                 <h3>Тренерский опыт</h3>
-                <p>Добивайтесь своих целей быстрее с профессиональным тренером</p>
+                <p class="advantages__experience-description">Добивайтесь своих целей быстрее с профессиональным тренером</p>
               </div>
             </div>
-
- <!--          <li class="advantages__item">
-            <div class="advantages__count-block">
-              <p class="advantages__count">70</p>
-              <p class="advantages__units">машин<p>
-            </div>
-            <div class="advantages__description-block">
-              <h3>Собственная парковка</h3>
-              <p>Вы всегда найдете место для своей машины на нашей парковке</p>
-            </div>
-          </li>
-
-          <li class="advantages__item">
-            <div class="advantages__count-block">
-              <p class="advantages__count">350</p>
-              <p class="advantages__units">мест<p>
-            </div>
-            <div class="advantages__description-block">
-              <h3>Комфорт</h3>
-              <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
-            </div>
-          </li>
-
-          <li class="advantages__item">
-            <div class="advantages__count-block">
-              <p class="advantages__count">5+</p>
-              <p class="advantages__units">лет<p>
-            </div>
-            <div class="advantages__description-block">
-              <h3>Тренерский опыт</h3>
-              <p>Добивайтесь своих целей быстрее с профессиональным тренером</p>
-            </div>
-          </li>
- -->
-
         </div>
+      </div>
+    </section>
+    <section class="promo">
+      <h2 class="promo__title">Акции</h2>
+      <div class="promo__container">
+        <div class="promo__main-promo">
+          <div class="promo__main-description">
+            <h3>Год</h3>
+            <p class="promo_price">4999</p>
+            <p class="promo__main-text">Безлимитный абонемент в тренажерный зал</p>
+            <a class="promo__main-link" href="#">подробнее</a>
+          </div>
+          <img class="promo__img-desktop" src="img/stock-desktop.jpg" width="280" height="462" alt="Спортсменка">
+          <img class="promo__img-tablet" src="img/stock-tablet.jpg" width="399" height="462" alt="Спортсменка">
+          <img class="promo__img-mobile" src="img/stock-mobile.jpg" width="290" height="299" alt="Спортсменка">
+        </div>
+        <ul class="promo__list">
+          <li>
+            <h3>Месяц бесплатно</h3>
+            <p class="promo__item-description">Приведи друга, получи абонемент в подарок</p>
+            <a class="promo__item-link" href="#">подробнее</a>
+          </li>
+          <li>
+            <h3>Скидка 20%</h3>
+            <p class="promo__item-description">Корпоративный фитнес  с командой</p>
+            <a class="promo__item-link" href="#">подробнее</a>
+          </li>
+        </ul>
       </div>
     </section>
 
