--- a/source/index.html
+++ b/source/index.html
@@ -441,6 +441,33 @@
       </div>
     </section>
 
+    <section class="reviews">
+      <h2 class="reviews__title">Отзывы</h2>
+      <div class="reviews__container">
+
+        <button type="button" class="reviews__arrow-left" aria-label="Влево">
+          <svg width="16" height="32">
+            <use xlink:href="#arrow"></use>
+          </svg>
+        </button>
+        <button type="button" class="reviews__arrow-right" aria-label="Вправо">
+          <svg width="16" height="32">
+            <use xlink:href="#arrow"></use>
+          </svg>
+        </button>
+        <ul class="reviews__list">
+          <li class="reviews__item">
+            <img class="reviews__avatar" src="img/feedback.png" width="80" height="80" alt="Аватарка">
+            <h3>Анна Орлова</h3>
+            <p>«Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+          </li>
+        </ul>
+
+      </div>
+
+
+    </section>
+
 
 
   </main>
