--- a/source/index.html
+++ b/source/index.html
@@ -457,21 +457,66 @@
         </button>
         <ul class="reviews__list">
           <li class="reviews__item">
-            <img class="reviews__avatar" src="img/feedback.png" width="80" height="80" alt="Аватарка">
-            <h3>Анна Орлова</h3>
+            <div class="reviews__person">
+              <img class="reviews__avatar" src="img/feedback.png" width="80" height="80" alt="Аватарка">
+              <h3>Анна Орлова</h3>
+            </div>
+            <p>«Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+          </li>
+          <li class="reviews__item">
+            <div class="reviews__person">
+              <img class="reviews__avatar" src="img/feedback.png" width="80" height="80" alt="Аватарка">
+              <h3>Борис Моисеев</h3>
+            </div>
+            <p>«Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+          </li>
+          <li class="reviews__item">
+            <div class="reviews__person">
+              <img class="reviews__avatar" src="img/feedback.png" width="80" height="80" alt="Аватарка">
+              <h3>Алла Пугачева</h3>
+            </div>
             <p>«Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
           </li>
         </ul>
+      </div>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <div class="page-footer__wrap">
 
+      <div class="page-footer__top-block">
+        <form class="page-footer__form" method="post" action="#">
+          <h2 class="page-footer__form-title">Бесплатное занятие</h2>
+          <div class="page-footer__input-container">
+            <label for="form-name" class="visually-hidden">Имя</label>
+            <input class="page-footer__form-input" type="text" id="form-name" placeholder="Имя" required>
+            <label for="form-phone" class="visually-hidden">Телефон</label>
+            <input class="page-footer__form-input" type="tel" id="form-phone" placeholder="Телефон" required>
+          </div>
+          <button class="page-footer__form-button" type="submit">Отправить</button>
+        </form>
+
+        <div class="page-footer__contacts">
+          <h2 class="page-footer__contacts-title">Контакты</h2>
+          <div class="page-footer__contacts-container">
+            <div class="page-footer__contacts-first-block">
+              <h3>Адрес</h3>
+              <p>г. Омск, ул. 60 лет Октября, 7</p>
+              <h3>График работы</h3>
+              <p>Пн-Вс: с 8:00 до 22:00</p>
+            </div>
+            <div class="page-footer__contacts-second-block">
+              <h3>Телефон:</h3>
+              <a class="page-footer__phone" href="tel:8-800-555-55-55">8-800-555-55-55</a>
+              <h3>Email:</h3>
+              <a class="page-footer__mail" href="mailto:omsk@supergym.ru">omsk@supergym.ru</a>
+            </div>
+          </div>
+        </div>
       </div>
 
+    </div>
 
-    </section>
-
-
-
-  </main>
-  <footer>
   </footer>
 
 
