--- a/source/index.html
+++ b/source/index.html
@@ -18,8 +18,8 @@
     <section class="intro">
       <div class="intro__wrap">
         <div class="intro__top-block">
-          <a class="page-header__logo">Supergym</a>
-          <a class="page-header__phone" href="tel:8-800-555-55-55" >8-800-555-55-55</a>
+          <a class="intro__logo">Supergym</a>
+          <a class="intro__phone" href="tel:8-800-555-55-55" >8-800-555-55-55</a>
         </div>
         <div class="intro__main">
           <div class="intro__main-container">
@@ -40,6 +40,7 @@
         </div>
       </div>
     </section>
+
     <section class="gym" id="gym">
       <div class="gym__description-container">
         <h2 class="gym__title">Тренажерный зал</h2>
@@ -48,19 +49,15 @@
         <p class="gym__text-desktop">В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажерами. Также в фитнес центре есть несколько оборудованных залов для различных видов групповых занятий.</p>
       </div>
       <div class="gym__photo-container">
-
         <img class="gym__photo-desktop" src="img/hall-desktop.jpg" width="660" height="401" alt="Тренажерный зал">
         <img class="gym__photo-tablet" src="img/hall-tablet.jpg" width="678" height="345" alt="Тренажерный зал">
         <img class="gym__photo-mobile" src="img/hall-mobile.jpg" width="320" height="313" alt="Тренажерный зал">
-
         <div class="gym__video-container">
-
-            <img class="gym__video-desktop" src="img/video-desktop.jpg" width="364" height="228" alt="Видео зала">
-            <img class="gym__video-tablet" src="img/video-tablet.jpg" width="266" height="167" alt="Видео зала">
-            <img class="gym__video-mobile" src="img/video-mobile.jpg" width="320" height="167" alt="Видео зала">
-
-        <button type="button" aria-label="Запустить видео"></button>
-       </div>
+          <img class="gym__video-desktop" src="img/video-desktop.jpg" width="364" height="228" alt="Видео зала">
+          <img class="gym__video-tablet" src="img/video-tablet.jpg" width="266" height="167" alt="Видео зала">
+          <img class="gym__video-mobile" src="img/video-mobile.jpg" width="320" height="167" alt="Видео зала">
+          <button type="button" aria-label="Запустить видео"></button>
+        </div>
       </div>
     </section>
 
@@ -74,7 +71,6 @@
             <li><span class="subscriptions__item-month">12 месяцев</span></li>
           </ul>
         </div>
-
         <ul class="subscriptions__tabs-list">
           <li>
             <h3>С тренером</h3>
@@ -110,11 +106,9 @@
                 <use xlink:href="#ruble"></use>
               </svg>
             </div>
-
             <a class="subscriptions__buy-link" href="#">купить абонемент</a>
           </li>
         </ul>
-
         <ul class="subscriptions__tabs-list">
           <li>
             <h3>С тренером</h3>
@@ -153,7 +147,6 @@
             <a class="subscriptions__buy-link" href="#">купить абонемент</a>
           </li>
         </ul>
-
         <ul class="subscriptions__tabs-list">
           <li>
             <h3>С тренером</h3>
@@ -197,9 +190,7 @@
 
     <section class="competitions">
       <div class="competitions__container">
-
         <div class="competitions__info">
-
           <div class="competitions__titel-container">
             <h2 class="competitions__title">SUPER GAMES</h2>
             <div class="competitions__block-data">
@@ -212,26 +203,20 @@
               <span class="competitions__time">12:00</span>
             </div>
           </div>
-
           <p class="competitions__description">Ежегодные соревнования по CrossFit</p>
           <a class="competitions__link" href="#">заполнить заявку</a>
-
         </div>
-
         <div class="competitions__picture">
-           <img class="competitions__img-desktop" src="img/games-desktop.jpg" width="660" height="500" alt="Спортивные соревнования">
-           <img class="competitions__img-tablet" src="img/games-tablet.jpg" width="386" height="292" alt="Спортивные соревнования">
-           <img class="competitions__img-mobile" src="img/games-mobile.jpg" width="290" height="292" alt="Спортивные соревнования">
+          <img class="competitions__img-desktop" src="img/games-desktop.jpg" width="660" height="500" alt="Спортивные соревнования">
+          <img class="competitions__img-tablet" src="img/games-tablet.jpg" width="386" height="292" alt="Спортивные соревнования">
+          <img class="competitions__img-mobile" src="img/games-mobile.jpg" width="290" height="292" alt="Спортивные соревнования">
         </div>
       </div>
-
     </section>
 
     <section class="coaches" id="coaches">
-
       <h2 class="coaches__title">Тренеры</h2>
       <div class="coaches__container">
-
         <button type="button" class="coaches__arrow-left" aria-label="Влево">
           <svg width="16" height="32">
             <use xlink:href="#arrow"></use>
@@ -242,7 +227,6 @@
             <use xlink:href="#arrow"></use>
           </svg>
         </button>
-
         <ul class="coaches__list">
           <li class="coaches__item">
             <h3 class="coaches__name">Анна Павлова</h3>
@@ -356,7 +340,6 @@
       <div class="advantages__wrap">
         <h2 class="advantages__title">Наши преимущества</h2>
         <div class="advantages__container">
-
           <div class="advantages__top-block">
             <div class="advantages__area">
               <div class="advantages__count-block">
@@ -368,7 +351,6 @@
                 <p class="advantages__area-description">Занимайтесь без очередей и толпучки</p>
               </div>
             </div>
-
             <div class="advantages__parking">
               <div class="advantages__count-block">
                 <p class="advantages__count">70</p>
@@ -379,14 +361,12 @@
                 <p class="advantages__parking-description">Вы всегда найдете место для своей машины на нашей парковке</p>
               </div>
             </div>
-
           </div>
           <div class="advantages__main-block">
             <p class="advantages__main-count">100</p>
             <p class="advantages__main-unit">Тренажеров</p>
             <p class="advantages__main-description">Современные тренажеры на все группы мышц</p>
           </div>
-
           <div class="advantages__bottom-block">
             <div class="advantages__comfort">
               <div class="advantages__count-block">
@@ -398,7 +378,6 @@
                 <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
               </div>
             </div>
-
             <div class="advantages__experience">
               <div class="advantages__count-block">
                 <p class="advantages__count">5+</p>
@@ -411,7 +390,9 @@
             </div>
         </div>
       </div>
+    </div>
     </section>
+
     <section class="promo" id="promo">
       <h2 class="promo__title">Акции</h2>
       <div class="promo__container">
@@ -444,7 +425,6 @@
     <section class="reviews">
       <h2 class="reviews__title">Отзывы</h2>
       <div class="reviews__container">
-
         <button type="button" class="reviews__arrow-left" aria-label="Влево">
           <svg width="16" height="32">
             <use xlink:href="#arrow"></use>
@@ -483,7 +463,6 @@
   </main>
   <footer class="page-footer">
     <div class="page-footer__top-wrap">
-
       <div class="page-footer__top-block">
         <form class="page-footer__form" method="post" action="#">
           <h2 class="page-footer__form-title">Бесплатное занятие</h2>
@@ -495,7 +474,6 @@
           </div>
           <button class="page-footer__form-button" type="submit">Отправить</button>
         </form>
-
         <div class="page-footer__contacts">
           <h2 class="page-footer__contacts-title">Контакты</h2>
           <div class="page-footer__contacts-container">
@@ -514,9 +492,7 @@
           </div>
         </div>
       </div>
-
     </div>
-
     <div class="page-footer__bottom-wrap">
       <div class="page-footer__bottom-block">
         <a class="page-footer__logo">Supergym</a>
@@ -537,7 +513,6 @@
             <a class="page-footer__nav-link" href="#">Расписание</a>
           </li>
         </ul>
-
         <ul class="page-footer__social-list">
           <li>
             <a class="page-footer__social-link" href="#">
@@ -564,7 +539,6 @@
             </a>
           </li>
         </ul>
-
       </div>
     </div>
   </footer>
