Убраны кнопки при отсутствия скрипта

--- a/source/index.html
+++ b/source/index.html
@@ -217,12 +217,12 @@
     <section class="coaches" id="coaches">
       <h2 class="coaches__title">Тренеры</h2>
       <div class="coaches__container">
-        <button type="button" class="coaches__arrow-left" aria-label="Влево">
+        <button type="button" class="coaches__arrow-left no-js" aria-label="Влево">
           <svg width="16" height="32">
             <use xlink:href="#arrow"></use>
           </svg>
         </button>
-        <button type="button" class="coaches__arrow-right" aria-label="Вправо">
+        <button type="button" class="coaches__arrow-right no-js" aria-label="Вправо">
           <svg width="16" height="32">
             <use xlink:href="#arrow"></use>
           </svg>
@@ -425,12 +425,12 @@
     <section class="reviews">
       <h2 class="reviews__title">Отзывы</h2>
       <div class="reviews__container">
-        <button type="button" class="reviews__arrow-left" aria-label="Влево">
+        <button type="button" class="reviews__arrow-left no-js" aria-label="Влево">
           <svg width="16" height="32">
             <use xlink:href="#arrow"></use>
           </svg>
         </button>
-        <button type="button" class="reviews__arrow-right" aria-label="Вправо">
+        <button type="button" class="reviews__arrow-right no-js" aria-label="Вправо">
           <svg width="16" height="32">
             <use xlink:href="#arrow"></use>
           </svg>
